# paertful_api_example

./: README.md
api_test_rust/: Cargo.toml  README.md
api_test_rust/src/: args.rs  main.rs  partful_types.rs
